--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,38 @@
-/* @import "https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css"; */
+@import "https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css";
+
+body {
+  background-color: #101726;
+  color: #fff;
+}
 
 .form,
 .greetings,
 .greeting__message,
-.greeting__save {
+.greeting__btn--save,
+.greeting__btn--edit {
   display: none;
 }
 
 .showing {
   display: block;
+}
+
+@keyframes backgroundFadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -9;
+  object-fit: cover;
+  animation: backgroundFadeIn 0.4s linear;
 }
